--- a/fe_swp/src/styles/Register.css
+++ b/fe_swp/src/styles/Register.css
@@ -5,24 +5,17 @@ form {
   border-radius: 10px !important;
   height: 14px;
 }
-.btn-login {
+.btn-Register {
   margin-top: 20px !important;
   border-radius: 15px !important;
   padding: 10px 0 !important;
   background-color: #00aaff !important;
 }
-.btn-loginGoogle {
-  margin-top: 20px !important;
-  border-radius: 15px !important;
-  border: 1px solid black;
-  padding: 8px 18px !important;
-  color: black !important;
-  background-color: rgb(239, 236, 236) !important;
-}
+
 .MuiInputBase-root {
   border-radius: 15px !important;
 }
-.login {
+.Register {
   height: 85vh;
   display: flex;
   justify-content: center;
