--- a/fe_swp/src/styles/Navigation.css
+++ b/fe_swp/src/styles/Navigation.css
@@ -89,3 +89,27 @@ li {
 .hide {
   color: white !important;
 }
+.menu_project {
+  display: flex;
+  display: none;
+  position: absolute;
+  background-color: white;
+  border: 1px solid gray;
+  box-shadow: 1px 1px 1px white;
+  border-radius: 10px;
+  transform: translate(120%,0);
+  z-index: 3;
+  
+}
+.menu_project ul {
+  list-style: none;
+  margin: 0px 20px;
+}
+.menu_project ul li{
+  color: black;
+  font-size: 16px;
+  font-weight: normal;
+  width: 100%;
+  line-height: 100%;
+  height: 100%;
+}
