--- a/fe_swp/src/styles/Dashboard.css
+++ b/fe_swp/src/styles/Dashboard.css
@@ -3,6 +3,23 @@
     margin: 0;
     box-sizing: border-box;
 }
+.content-header {
+    margin: 20px 0;
+    text-align: left;
+}
+#buttonOpenModal {
+    margin-left: 30px;
+    justify-content: center;
+    cursor: pointer;
+    background-color: transparent;
+    border-bottom: 2px solid black;
+    transition: 0.5s;
+}
+#buttonOpenModal:hover {
+    color: red;
+    border-bottom: 2px solid red;
+    transition: 0.5s;
+}
 .element {
      width: 30%;
      margin: 0 10px;
