--- a/fe_swp/src/styles/Project.css
+++ b/fe_swp/src/styles/Project.css
@@ -24,14 +24,42 @@
   margin-top: 5vh;
 }
 .your_pr {
-  padding-top: 5vh;
+  padding-top: 2vh;
   width: 75vw;
   display: flex;
   justify-content: space-between;
+  overflow: auto; /* or overflow: scroll; */
+  padding-bottom: 2vh;
+  /* add margin to the div */
 }
 .project {
-  width: 20vw;
-  background-color: red;
+  cursor: pointer;
+  text-align: center;
+  min-width: 20vw;
+  margin-right: 5vw;
+  display: inline-block;
   margin-top: 5vh;
   border-radius: 20px;
+}
+.project_img {
+  padding: 8vh 0;
+  border-radius: 20px 20px 0px 0px;
+  background-color: rgb(235, 122, 122);
+}
+.project_title {
+  padding: 3vh 0;
+  background-color: white;
+  border-radius: 0px 0px 20px 20px;
+}
+/* custom scroll bar */
+/* webkit-based browsers */
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+  margin-top: 20px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #999;
+  border-radius: 5px;
 }
