--- a/fe_swp/src/styles/Project.css
+++ b/fe_swp/src/styles/Project.css
@@ -9,6 +9,16 @@
   align-items: center;
   justify-content: center;
 }
+.btn_share {
+  display: flex;
+  border-radius: 5px;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background-color: #6c5dd3;
+  cursor: pointer;
+}
 .project_component {
   background-color: #d9d9d9;
   height: 92vh;
