--- a/fe_swp/src/styles/MyTasks.css
+++ b/fe_swp/src/styles/MyTasks.css
@@ -1,35 +1,39 @@
 * {
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 .content {
-    background-color: #D9D9D9;
-     height: 92vh; 
+  background-color: #d9d9d9;
+  height: 92vh;
 }
-.personal-task h1{
-    text-align: left;
-    margin: 2vw 4vw;
+.personal-task h1 {
+  text-align: left;
+  margin: 2vw 4vw;
+}
+.listTaskall {
+  max-height: 60vh;
+  overflow-y: auto;
 }
 .taskDetail {
-    background-color: white;
-    height: 3vw;
-    display: flex;
-    margin: 1vw 5vw;
-    border-radius: 5px;
-    cursor: pointer;
+  background-color: white;
+  height: 3vw;
+  display: flex;
+  margin: 1vw 5vw;
+  border-radius: 5px;
+  cursor: pointer;
 }
 .taskDetail input {
-    border: none;
-    margin: auto 2vw ;
+  border: none;
+  margin: auto 2vw;
 }
 .taskDetail h4 {
-    max-width: 30vw;
-    min-width: 30vw;
-    overflow: hidden;
-    text-align: left;
-    margin: auto 0px ;
+  max-width: 30vw;
+  min-width: 30vw;
+  overflow: hidden;
+  text-align: left;
+  margin: auto 0px;
 }
 .taskDetail p {
-    margin: auto 1vw ;
+  margin: auto 1vw;
 }
