--- a/fe_swp/src/styles/ProjectDetails.css
+++ b/fe_swp/src/styles/ProjectDetails.css
@@ -46,7 +46,7 @@
 } */
 .section_name {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   width: 18vw;
   height: 5vh;
@@ -89,16 +89,16 @@
   border: none;
 }
 .section_name button {
-   background-color: white;
-   border-bottom-right-radius: 15px;
-   border-top-right-radius: 15px;
-   border-left: 1px solid black !important;
-   border: none;
-   padding-left: 5px;
-   cursor: pointer;
-   position: absolute;
-   z-index: 9;
-   right: 1vw;
-   height: 3vh;
-   margin: auto;
+  background-color: white;
+  border-bottom-right-radius: 15px;
+  border-top-right-radius: 15px;
+  border-left: 1px solid black !important;
+  border: none;
+  padding-left: 5px;
+  cursor: pointer;
+  position: absolute;
+  z-index: 9;
+  right: 1vw;
+  height: 3vh;
+  margin: auto;
 }
