--- a/fe_swp/src/styles/Home.css
+++ b/fe_swp/src/styles/Home.css
@@ -9,11 +9,13 @@ body {
 
 .main-content {
     height: 100vh;
-     background-color: #D9D9D9;
+    background-image: url("https://www.meistertask.com/images/wallpapers/242659165.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .content{
     float: right;
     width: 85%;
-    height: 100%;
+    height: 100vh;
     overflow: auto;
 }
