--- a/fe_swp/src/styles/TaskDetails.css
+++ b/fe_swp/src/styles/TaskDetails.css
@@ -48,15 +48,18 @@
     width: 70%;
     padding-top: 12vh;
     padding-left: 2vw;
+    border-right: 1px solid rgb(129, 125, 125);
+    box-shadow: 2px 0 1px rgb(179, 174, 174);
 }
 .right {
     width: 30%;
     padding-top: 12vh;
+
+    
 }
 .right > h4 > span {
     font-weight: none;
     margin-left: 10px;
-
 }
 .des,.status,.tag {
     margin: 10px 0;
@@ -76,26 +79,43 @@
 }
 .input_title {
     border: none;
+    border-bottom: 1px solid black;
     background-color: transparent;
     font-weight: bold;
     font-size: 32px;
 }
 .tagh3 {
     border: none;
+    border-bottom: 1px solid black;
     background-color: transparent;
     font-weight: bold;
     font-size: 19px;
+    margin-left: 10px;
+    font-weight: normal;
 }
 .tagh4 {
     border: none;
+    border-bottom: 1px solid black;
     background-color: transparent;
     font-size: 16px;
+    margin-left: 10px;
 }
 .textare {
-    width: 100%;
-    border: none;
+    margin-top: 30px;
+    width: 78%;
     resize: none;
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
     padding: 10px 10px;
+}
+.time_tas {
+    width: 100%;
+    padding: 30px 20px;
+    border-bottom: 1px solid rgb(129, 125, 125);
+    box-shadow: 2px 1px 0 rgb(179, 174, 174) ;
+
+}
+.projectinfo {
+    width: 100%;
+    padding: 30px 20px;
 }
