--- a/fe_swp/src/styles/Home.css
+++ b/fe_swp/src/styles/Home.css
@@ -1,21 +1,21 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 body {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 .main-content {
-    height: 100vh;
-    background-image: url("https://www.meistertask.com/images/wallpapers/242659165.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
+  height: 90vh;
+  width: 100vw;
+  background-image: url("https://haycafe.vn/wp-content/uploads/2021/12/Hinh-anh-dep-Powerpoint.png");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-.content{
-    float: right;
-    width: 85%;
-    height: 100vh;
-    overflow: auto;
+.content {
+  float: right;
+  width: 85%;
+  height: 100vh;
 }
