--- a/fe_swp/src/styles/ProjectDetails.css
+++ b/fe_swp/src/styles/ProjectDetails.css
@@ -102,3 +102,18 @@
   height: 3vh;
   margin: auto;
 }
+.listTaskOfM 
+{
+  display:none;
+  background-color: rgb(168, 166, 166);
+  border-radius: 20px;
+}
+.listTaskOfM ul {
+  list-style-type: none;
+}
+.listTaskOfM ul li {
+font-size: 16px;
+margin: 5px auto !important;
+padding:1vh 40px;
+pointer-events:none;
+}
