--- a/fe_swp/src/styles/TableCalendar.css
+++ b/fe_swp/src/styles/TableCalendar.css
@@ -1,9 +1,23 @@
 :root {
   --cl-1: #222831;
-  --cl-2: #393E46;
-  --cl-3: #00ADB5;
-  --cl-4: #EEEEEE;
-  --gb-grd: linear-gradient(to right top, #00adb5, #2197a8, #338196, #3c6b80, #3f5768, #3c4c5b, #38424e, #333841, #2f343d, #2a3039, #262c35, #222831);
+  --cl-2: #393e46;
+  --cl-3: #00adb5;
+  --cl-4: #eeeeee;
+  --gb-grd: linear-gradient(
+    to right top,
+    #00adb5,
+    #2197a8,
+    #338196,
+    #3c6b80,
+    #3f5768,
+    #3c4c5b,
+    #38424e,
+    #333841,
+    #2f343d,
+    #2a3039,
+    #262c35,
+    #222831
+  );
 }
 
 .TableCalendar {
@@ -11,7 +25,8 @@
   width: 100%;
   background-color: var(--cl-2);
 
-  box-shadow: 1px 2px 3px 4px rgba(0, 0, 0, .1);
+  /* height: 65vh; */
+  box-shadow: 1px 2px 3px 4px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   overflow: hidden;
 }
@@ -28,14 +43,14 @@
 .nav {
   width: 30px;
   height: 30px;
-  border: 0px ;
+  border: 0px;
   border-radius: 99px;
   outline: 0;
   background-color: transparent;
   color: #fff;
   cursor: pointer;
 }
-.nav:hover{
+.nav:hover {
   background-color: var(--cl-2);
 }
 .datetime {
@@ -57,9 +72,8 @@
   justify-content: center;
   align-items: center;
   height: 100px;
-
 }
-.day-cell--picking{
+.day-cell--picking {
   border-radius: 99px;
   background-color: #1abc9c;
   color: #fff;
@@ -71,7 +85,6 @@
   color: #fff;
   font-weight: bold;
 }
-.day-cell--faded{
-    opacity: .4;
-  
+.day-cell--faded {
+  opacity: 0.4;
 }
