--- a/fe_swp/src/styles/TableCalendar.css
+++ b/fe_swp/src/styles/TableCalendar.css
@@ -71,7 +71,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100px;
+  height: 10vh;
 }
 .day-cell--picking {
   border-radius: 99px;
